testsuite/tests/splice-imports/SI03.stderr

SI03.hs:8:11: error:
    • Splice import
      sid
        imported from ‘SI01A’ at SI03.hs:5:1-12
        (and originally defined at SI01A.hs:3:1-3)
    • In the untyped splice: $(sid [| pure () |])
